# DLCP

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  _bootstrap.py  pyproject.toml  pytest.ini
.claude/: settings.json
.claude/hooks/: codex-review-on-commit.sh
crates/dlcp-sim/: Cargo.toml
crates/dlcp-sim-cli/: Cargo.toml
crates/dlcp-sim-cli/src/: main.rs
crates/dlcp-sim-cli/tests/: cli_argv.rs
crates/dlcp-sim-py/: Cargo.toml  build.rs  build.sh
crates/dlcp-sim-py/.cargo/: config.toml
crates/dlcp-sim-py/src/: lib.rs
crates/dlcp-sim/fuzz/: Cargo.toml
crates/dlcp-sim/fuzz/fuzz_targets/: ir_stream.rs
crates/dlcp-sim/src/: boot_offset.rs  chain.rs  clock.rs  config.rs  core.rs  exec.rs  hex.rs  lcd.rs  lib.rs  memory.rs  pinnet.rs  reset.rs  scheduler.rs  serde_helpers.rs  snapshot.rs  stack.rs
crates/dlcp-sim/src/isa/: decode.rs  fsr.rs  mod.rs
crates/dlcp-sim/src/peripherals/: adc.rs  eeprom.rs  eusart.rs  gpio.rs  irq.rs  mod.rs  mssp.rs  osc.rs  src4382.rs  stubs.rs  tas3108.rs  timer.rs  usb.rs
crates/dlcp-sim/tests/: isa_parity.rs  multicore_parity.rs  peripheral_adc_parity.rs  peripheral_eeprom_parity.rs  peripheral_eusart_parity.rs  peripheral_gpio_parity.rs  peripheral_irq_parity.rs  peripheral_mssp_parity.rs  peripheral_osc_parity.rs  peripheral_stub_policy.rs  peripheral_timers_parity.rs  peripheral_usbsie_parity.rs  snapshot_property.rs  snapshot_soak.rs
dlcp_fw/: __init__.py
docs/: AB_PRESETS.md  DLCP_LINK_V2_SPEC.md  HARDWARE_LOOP.md  HARDWARE_TEST.md  IMPL_SIM_REWRITE_RUST_FIDELITY_SPEC.md  IMPL_SRC4382_AUTODETECT_POLLING_SPEC.md  IMPL_V16B_SOURCE_REWRITE_SPEC.md  IMPL_V171_V32_BUG_LEDGER.md  IMPL_V171_V32_DIAG_FAULT_INJECTION_MATRIX.md  IMPL_V172_V33_DIAG_MAIN_IDENTITY.md  IMPL_V30_SOURCE_REWRITE_SPEC.md  IMPL_V30_SOURCE_REWRITE_SPECv2.md  IMPL_V31_SOURCE_REWRITE_SPEC.md  NO_POP_FIRMWARE_FLASH.md  PF4_PHASE2_PLAN.md  RECOVERY.md  RELEASE_ARCHIVE.md  ROBUSTNESS.md  R_L_ROUTING.md  SIMULATION.md  SIMULATION_FIDELITY.md  SIM_REWRITE_AGENT_INSTRUCTIONS.md  SIM_REWRITE_RUST_PROGRESS.md  SIM_REWRITE_RUST_SPEC.md  SRC4382_AD_MANUAL_EVIDENCE_TEMPLATE.md  SRC4382_AUTODETECT_POLLING_SPEC.md  SRC4382_USB_DIAGNOSTICS_SPEC.md  TEST_SIMULATOR.md  V163B_DIAGNOSTICS_MENU_SPEC.md  V16B_SOURCE_REWRITE_SPEC.md  V171_IR_NONBLOCK_DECODER_SPEC.md  V171_RELEASE.md  V171_V32_DIAG_FAULT_INJECTION_MATRIX.md  V171_V32_LINK_HEALTH_FRESHNESS_SPEC.md  V171_V32_SOURCE_SELECT_PARITY_TESTS.md  V27_V163B_SPEC.md  V27_V163B_STATUS.md  V28_DELAYED_SWITCH_REMEDIATION_PLAN.md  V30_SOURCE_REWRITE_SPEC.md  V31_RELEASE.md  (+8 more)
docs/analysis/: ANALYSIS_REPORT_CLAUDE.md  CONTROL_FW_VERSION_DIFFS.md  CONTROL_UNIT_ANALYSIS.md  FIRMWARE_UPDATE_MECHANISM.md  GPSIM_18F25K20_PORT_PLAN.md  GPSIM_MAIN_TIMER3_GAP_HANDOFF_PROMPT.md  GPSIM_PB2_CACHE_MISROUTE.md  HFD_v2.12-RL-binary-patch-plan.md  HFD_v2.12-codex.md  HFD_v4.97-codex.md  HW_2026-04-27_DIAG_AND_STDBY_FINDINGS.md  MAIN_AN0_STANDBY_TRACE.md  MAIN_CLOCK_TIMING.md  MCU_TARGET_CORRECTION_2026-03-11.md  PIN_SEMANTICS.md  REANALYSIS_CORRECTIONS_2026-02-16.md  SEMANTIC_FUNCTION_MAP.md  SIMULATION_STDBY_WAIT_DIAGNOSIS.md  STOCK_SYNC_DEADLOCK_ANALYSIS_2026-03-08-gpt-5.2-pro.md  STOCK_SYNC_DEADLOCK_ANALYSIS_2026-03-08-gpt-5.4-xhigh.md  STOCK_SYNC_DEADLOCK_ANALYSIS_2026-03-08-opus-4.6.md  TASK_44_LCD_VS_CMD44_DIVERGENCE.md  TASK_45_ASYMMETRIC_WAKE_HYPOTHESES.md  V162B_RECONNECT_WAKE_BUG.md  V162B_STDBY_TXIE_BUG.md  V171_DIAG_PROTOCOL_TIMELINE_2026-05-04.md  V171_STBY_FROM_DIAG_PROBE_2026-05-04.md  V171_V32_STDBY_WAKE_WAITING_REAL_HW_2026-04-22.md  V32_SIM_FAULT_INJECTION_SWEEP_2026-05-12.md
docs/prompts/: STANDBY_SIM_IMPROVEMENT_PROMPT.md
firmware/reference/: 39632e.md  39632e.txt  40001303h.md  convert.py  convert_pdf_to_md.py  convert_pdf_to_md_pymupdf.py  dlcp.md  src4382.md  tas3108.md
scripts/: _bootstrap.py  annotate_disasm.py  bake_preset_capture.py  build_v171_release.py  build_v172_release.py  build_v30.sh  build_v32_release.py  build_v33_release.py  capture_gpsim_ground_truth.py  capture_v171_early_boot_parity.py  check_gpsim_excision.py  check_ground_truth_capture.py  check_phase4_gate.py  check_phase5_gate.py  check_replay_round_trip.py  convert_v16b_asm_to_gpasm.py  disasm_to_source.py  dlcp_diag.py  dlcp_ep0_flash_probe.py  dlcp_hfd_upload.py  dlcp_main_flash.py  dlcp_preset.py  dlcp_probe_chain_link.py  dlcp_read_coeffs.py  dlcp_v31_release_flash.py  dlcp_v32_release_flash.py  dlcp_v33_release_flash.py  flash_control_safe.sh  gpsim  gpsim-xtc  gpsim_headless_chain_diagnose.py  gpsim_lcd_capture_decode.py  gpsim_menu_command_audit.py  gpsim_tui_simulator.py  hardware_flipper_ir.py  hardware_lcd_probe.py  hardware_loop.py  hardware_state_test.py  patch_hfd_v212_rl.py  probe_baudcon_mapping.py  (+17 more)
src/dlcp_fw/: __init__.py  paths.py
tests/: conftest.py
tests/asm_unit_tests/: README.md  _unit_test_build.py  harness_main_core_service_265c.asm  test_main_core_service_265c_parity.py
tests/hardware/: test_live_state_transitions.py
tests/sim/: conftest.py  test_bake_preset_capture.py  test_bus_faults.py  test_chain_gpsim_v141_v24_v25_recovery.py  test_chain_gpsim_v161b_v24_v25_i2c_faults.py  test_chain_gpsim_v25_recovery.py  test_chain_gpsim_v25_v162b_recovery.py  test_chain_gpsim_waiting.py  test_control_gpsim_command_emission_legacy.py  test_control_gpsim_full_config_persistence.py  test_control_gpsim_host_command_injection.py  test_control_gpsim_ir_compatibility.py  test_control_gpsim_ir_preset_switch.py  test_control_gpsim_preset_eeprom_diff.py  test_control_gpsim_preset_filename_display.py  test_control_gpsim_response_parser.py  test_control_main_powercycle_sync.py  test_control_ui_and_persistence.py  test_control_v15b_port_compatibility.py  test_control_v164b_ir_endpoints.py  test_control_v164b_version_label.py  test_control_v16b_port_compatibility.py  test_disasm_to_source.py  test_dlcp_control_flash_safety.py  test_dlcp_diag.py  test_dlcp_ep0_eeprom_shadow_dump.py  test_dlcp_ep0_flash_probe.py  test_dlcp_hfd_upload.py  test_dlcp_main_flash.py  test_dlcp_main_flash_capture_overlay.py  test_dlcp_preset.py  (+114 more)
(+204 files in other folders)
