[workspace]
resolver = "3"
members = ["crates/dlcp-sim", "crates/dlcp-sim-py", "crates/dlcp-sim-cli"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
bincode = { version = "2", features = ["serde", "std"] }
serde_json = "1"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
