[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dlcp-fw-analysis"
version = "0.0.0"
description = "Analysis, simulation, and flashing tools for Hypex DLCP firmware."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hidapi>=0.15",
    "pyusb>=1.3",
]

[project.optional-dependencies]
dev = [
    "intelhex>=2.3",
    "numpy>=2.0",
    "pyserial>=3.5",
    "pytest>=8",
    "pytest-xdist>=3",
    "ruff>=0.8",
    "tabulate>=0.9",
]
sim = [
    "intelhex>=2.3",
    "numpy>=2.0",
    "pyserial>=3.5",
    "pytest>=8",
    "pytest-xdist>=3",
    "tabulate>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]
