[package]
name = "dlcp-sim-py"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# Python's import machinery looks for `dlcp_sim_native.{so,pyd}`
# (the `lib` prefix is stripped by macOS's dynamic loader on
# import), so set the cdylib name explicitly.  The compiled
# artifact still lands at `target/release/libdlcp_sim_native.{
# dylib,so}` -- see `build.sh` for the post-build symlink that
# makes `.venv_ep0/bin/python -c "import dlcp_sim_native"` work
# from inside the crate directory.
name = "dlcp_sim_native"
crate-type = ["cdylib"]

[dependencies]
# Pinned to 0.28.x for Python 3.14 support (added in PyO3
# 0.24+; we use the latest stable so we get any new
# limited-API improvements).  `extension-module` tells
# PyO3 we are building a C extension that the host Python
# interpreter will `dlopen` -- it switches off the link-
# against-libpython path that `cargo build` would otherwise
# take, leaving `_Py_*` symbols to be resolved at runtime.
# (NOT to be confused with `abi3*` features, which control
# `Py_LIMITED_API` opt-in for binary stability across
# Python releases.  We don't enable abi3 today because the
# verify path pins one Python version anyway.)
pyo3 = { version = "0.28", features = ["extension-module"] }

# Workspace-shared core simulation engine.  P4.1 only uses
# `CARGO_PKG_VERSION` from this crate to populate
# `dlcp_sim_native.__version__`; later sub-tasks (P4.2+)
# will expose `Chain`, `Core`, `step_ticks`, etc. through
# this dep.
dlcp-sim = { path = "../dlcp-sim" }

[build-dependencies]
# `pyo3-build-config` exposes `add_extension_module_link_args()`
# which (per pyo3-build-config 0.28.3 source) emits two
# `cargo:rustc-cdylib-link-arg=` directives on macOS:
#     -undefined
#     dynamic_lookup
# These are cdylib-specific link args, so they fix the
# `cargo build` cdylib output regardless of cargo's
# invocation cwd -- in particular `cargo build -p
# dlcp-sim-py` from the workspace root now succeeds on
# macOS (codex MEDIUM from 45b041d).  They do NOT apply
# to test binaries / examples, so a future
# `cargo test --workspace` that compiled tests inside this
# crate could still hit `_Py_*` link errors on macOS;
# we'll cross that bridge in P4.2 if/when this crate
# grows test code that links against pyo3.
pyo3-build-config = "0.28"

[lints]
workspace = true
