[package]
name = "dlcp-sim"
description = "Cycle-accurate single-process PIC18 simulator for the Hypex DLCP chain"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "src/lib.rs"
